checkout.css
* {
  font-family: "Raleway", sans-serif;
  font-size: 16px;
}

body {
  margin: 0;
  padding-left: 50px;
}

h1 {
  font-weight: 400;
  font-size: 40px;
  display: flex;
  justify-content: center;
  margin-bottom: 50px;
}

.form-shipping {
  width: 600px;
  /* margin-left: 50px; */
}

input,
#country,
textarea {
  padding: 10px 10px;
  border: 1px black solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.individual-form {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  margin-bottom: 10px;
}

.submitbutton {
  background-color: black;
  color: white;
  border: none;
  text-align: center;
  width: 250px;
  height: 40px;
  margin-left: 350px;
  margin-top: 30px;
  font-size: 14px;
}

select {
  background: none;
  -moz-appearance: none; /* Firefox */
  -webkit-appearance: none; /* Safari and Chrome */
  appearance: none;
  padding-right: 20px;
  position: relative;
  margin-top: 5px;
}

select {
  background-image: url("img/Component\ 1.svg");
  background-repeat: no-repeat, repeat;
  background-position: right 1.5em top 50%, 0 0;
  background-size: 0.65em auto, 100%;
}

.address-category,
.contact-category {
  margin-top: 50px;
}

input {
  margin-top: 5px;
}

footer {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: -50px;
}

.footer-line {
  display: flex;
  justify-content: center;
  background-color: #aed5b2;
  width: 1300px;
  height: 3px;
  border-radius: 10px;
}

.category-flex {
  display: flex;
  justify-content: center;
  margin-right: -100px;
  flex-wrap: wrap;
}

.footer-category {
  margin-bottom: 10px;
  display: flex;
  flex-direction: column;
  margin-right: 100px;
}

.footer-title {
  font-weight: 400;
  font-size: 22px;
  margin-top: 35px;
  margin-bottom: 8px;
}

.footer-link {
  text-decoration: none;
  color: black;
  margin-top: 5px;
}

.footer-link:hover {
  color: rgb(122, 122, 122);
}

.footer-pic {
  display: flex;
  flex-direction: row;
  margin-right: -30px;
}

.footer-social {
  width: 50px;
  height: auto;
  margin-right: 15px;
}

.footer-pay {
  height: 20px;
  width: auto;
  margin-right: 15px;
}

.address-footer {
  text-align: center;
}

.payment-div {
  display: flex;
  /* margin-left: 50px; */
}

.active-payment {
  border: 3px solid #acd5b5;
  border-radius: 5px;
  height: 150px;
  width: 300px;
  margin-right: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.inactive-payment {
  border: 1px solid #cccccc;
  border-radius: 5px;
  height: 154px;
  width: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.payment-choice {
  height: 70px;
  width: auto;
}

h3 {
  font-weight: 400;
  font-size: 20px;
  color: #7f7f7f;
}

.form-billing {
  width: 400px;
}

.city-form {
  /* width: 150px; */
  margin-right: 20px;
}

.city-group {
  display: flex;
}

